5.3.1

- Core libraries
  - Added "locative-index", kindly contributed by John Croisant.

- Build system
  - Default "cc" on BSD systems for building CHICKEN to avoid ABI problems
    when linking with C++ code.

5.3.0

- Core libraries
  - In (chicken process-context posix), the setters for current-user-id,
    current-effective-user-id and current-group-id now check that the
    new user/group value is a fixnum instead of blindly passing it on
    to the C implementation (which would cause bogus user ids to be set).
    Fixes #1787, thanks to Christopher Brannon.
  - The srfi-17 module now exports the `getter-with-setter` and `setter`
    procedures, not just the set! macro (thanks to Lassi Kortela)
  - Fix hang in chicken-install -update-db on Windows (thanks to Mark
    Fisher for reporting and Jani Hakala for debugging and patch).
  - Fixed an inadvertant error during error reporting in the `numerator`
    and `denominator` procedures when passed non-finite flonums (#1730).
  - Fixed a bug where optimisations for `irregex-match?` would cause
    runtime errors due to the inlined specialisations not being
    fully-expanded (see #1690).
  - Irregex has been updated to upstream 0.9.10, which fixes behaviour
    of irregex-replace/all with positive lookbehind so all matches are
    replaced instead of only the first (reported by Kay Rhodes), and
    a regression regarding replacing empty matches which was introduced
    by the fixes in 0.9.7 (reported by Sandra Snan).  Also, the
    http-url shorthand now allows any top-level domain and the old
    "top-level-domain" now also supports "edu" (fixed by Sandra Snan).
    Also, a problem was fixed with capturing groups inside a kleene
    star, which could sometimes return incorrect parts of the match.
    Finally, "bol" handling was fixed to handle newlines consistently
    so that multiple matches don't overlap (reported by Sandra Snan).
  - current-milliseconds has been deprecated in favor of the name