@@ -191,6 +191,7 @@
     ("C_a_i_flonum_sqrt" float)
     ("C_a_i_flonum_tan" float)
     ("C_a_i_flonum_times" float)
+    ("C_a_i_flonum_multiply_add" float)
     ("C_a_i_flonum_truncate" float)
     ("C_a_u_i_f64vector_ref" float)
     ("C_a_u_i_f32vector_ref" float)
@@ -201,6 +202,7 @@
   '(("C_a_i_flonum_plus" "C_ub_i_flonum_plus" op)
     ("C_a_i_flonum_difference" "C_ub_i_flonum_difference" op)
     ("C_a_i_flonum_times" "C_ub_i_flonum_times" op)
+    ("C_a_i_flonum_multiply_add" "C_ub_i_flonum_multiply_add" op)
     ("C_a_i_flonum_quotient" "C_ub_i_flonum_quotient" op)
     ("C_flonum_equalp" "C_ub_i_flonum_equalp" pred)
     ("C_flonum_greaterp" "C_ub_i_flonum_greaterp" pred)
